chore: add basic rendering loop

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>TypeScript Web Application</title>
+		<title>Raycasting</title>
 		<style type="text/css">
 			body 
 			{
@@ -11,11 +11,17 @@
 				flex-direction: column;
 				align-items: center;
 			}
+
+			canvas {
+				border: solid black 2px;
+			}
 		</style>
 		<script type="module" src="__SCRIPT__"></script>
 	</head>
 	<body>
-    <h1>TypeScript Web Application</h1>
-    <p>A TypeScript web application template that can be used as a seed for new projects</p>
+    <h1>Raycasting</h1>
+		<p>Experiment in rendering using raycasting</p>
+		<canvas id="canvas" width="640" height="480">
+		</canvas>
 	<body>
 </html>
