feat: basic texture mapping working

--- a/src/index.html
+++ b/src/index.html
@@ -15,10 +15,15 @@
 			canvas {
 				border: solid black 2px;
 			}
+
+			img {
+				display: none;
+			}
 		</style>
 		<script type="module" src="__SCRIPT__"></script>
 	</head>
 	<body>
+		<img id="tex" src="assets/wall.brick.01.png"/>
     <h1>Raycasting</h1>
 		<p>Experiment in rendering using raycasting</p>
 		<canvas id="canvas" width="640" height="480">
