--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Raycasting</title>
-		<link href="index.css" rel="stylesheet">
+		<link rel="stylesheet" href="index.css">
 		<script type="module" src="index.js"></script>
 	</head>
 	<body>
