fix: unclosed tag in html

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,5 +9,5 @@
 		<p>Experiment in rendering using raycasting</p>
 		<canvas id="canvas" width="640" height="480">
 		</canvas>
-	<body>
+	</body>
 </html>
