--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,13 +1,12 @@
 <html>
-	<head>
-		<title>Raycasting</title>
-		<link rel="stylesheet" href="index.css">
-		<script type="module" src="index.js"></script>
-	</head>
-	<body>
+  <head>
+    <title>Raycasting</title>
+    <link rel="stylesheet" href="index.css" />
+    <script type="module" src="index.js"></script>
+  </head>
+  <body>
     <h1>Raycasting</h1>
-		<p>Experiment in rendering using raycasting</p>
-		<canvas id="canvas" width="640" height="480">
-		</canvas>
-	</body>
+    <p>Experiment in rendering using raycasting</p>
+    <canvas id="canvas" width="640" height="480"> </canvas>
+  </body>
 </html>
