feat: import updated engine from ludumdare48

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,6 @@
   </head>
   <body>
     <h1>Raycasting</h1>
-    <p>Experiment in rendering using raycasting</p>
-    <canvas id="canvas" width="640" height="480"> </canvas>
+    <p>A simple ray casting engine built using TypeScript</p>
   </body>
 </html>
