--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,6 +4,5 @@
     <link rel="stylesheet" href="index.css" />
     <script type="module" src="index.js"></script>
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
